# republic-project

./: .gitignore  INSTALL  Makefile  Naamloos.ipynb  Parse-REPBULIC-hOCR.ipynb  Parse-hOCR-columns.ipynb  Pipfile  README.md  Republic-Extract-Index-Lemmas.ipynb  _config.yml  do_all_indexing.py  do_attendance_indexing.py  do_embeddings.py  do_htr_session_indexing.py  do_indexing.py  do_tagging.py  do_training.py  fuzzy_context_searcher.py  fuzzy_keyword.py  fuzzy_keyword_searcher.py  fuzzy_patterns.py  fuzzy_person_name_searcher.py  fuzzy_searcher.py  inventory_mapping.py  parse_hocr_files.py  parse_republic_hocr_files.py  pyproject.toml  republic_base_page_parser.py  republic_column_parser.py  republic_elasticsearch.py  republic_file_parser.py  republic_index_page_parser.py  republic_page_checks.py  republic_page_parser.py  republic_paragraph_parser.py  republic_phrase_model.py  republic_resolution_page_parser.py  requirements.txt  run_attendancelist.py  save_inventory_metadata.py  (+3 more)
_includes/: nav.html
admin/: README.md  tools.md  voorbereiding.md
config/: config-ner-machamp.json  params-ner-machamp.json  republic_config.py
docs/: pagexml_scans.md  phrase_models.md
elastic/: republic_elasticsearch.py  republic_page_checks.py
emigratie/: ingforms_to_json.py
enrichment/: Makefile  README.md  compare-annotations.sh  ner-output  update_provenance.awk
fuzzy/: fuzzy_context_searcher.py  fuzzy_keyword.py  fuzzy_keyword_searcher.py  fuzzy_person_name_searcher.py  fuzzy_searcher.py
gnb/: .gitignore  README.md
huygens_name_index/: .gitignore  Pipfile  biodes10.py  deduplication_experiment.ipynb  na_csv_to_index.ipynb  naam.py  namen_to_es.py  namenindex_recreated.ipynb  namenindex_recreated.py  (+4 more)
(+19652 files in other folders)
