[tool.poetry]
name = "republic-project"
version = "0.1.0"
description = "Code base for REPUBLIC project"
authors = [
    "Marijn Koolen <marijn.koolen@huygens.knaw.nl>",
    "Rik Hoekstra <rik.hoekstra@di.knaw.huc.nl",
    "Hayco de Jong <hayco.de.jong@di.knaw.huc.nl"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/HuygensING/republic-project"
repository = "https://github.com/HuygensING/republic-project"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "republic" }]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.22.3"
matplotlib = "^3.7.0"
pandas = "^2.2.3"
python-dateutil = "^2.8.2"
scipy = "^1.7.0"
seaborn = "^0.13"
xmltodict = "^0.13.0"
fuzzy-search = "^2.4.2"
elasticsearch = "^7.15.0,<8.0"
tqdm = "^4.48.2"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.1"
PyYAML = "^6.0.1"
fastparquet = "*"
networkx = "*"
urllib3 = "^1.26.5"
jupyterlab = "^4.2.7"
regex = "*"
maturin = "*"
analiticcl = "*"
langdetect = "*"
nltk = "*"
scikit-learn = "*"
torch = "*"
pagexml-tools = "^0.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
icecream = "^2.1.2"
loguru = "^0.6.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/HuygensING/republic-project/issues"

[tool.poetry.scripts]
version = 'poetry_scripts:version'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
